apps/core-services/traefik/ingress/dashboard.yaml
apiVersion: v1
kind: Service
metadata:
  name: traefik-dashboard
  namespace: core-services
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/instance: traefik-helm-core-services
    app.kubernetes.io/name: traefik
  ports:
    - protocol: TCP
      port: 80
      targetPort: 9000
