apps/core-services/traefik/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik
  namespace: core-services
spec:
  tls:
  - secretName: cert-ingress.dev.skyloft.cc
  rules:
  - host: ingress.dev.skyloft.cc
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: traefik-dashboard
            port:
              number: 80
